--- a/WeatherApp/src/main.html
+++ b/WeatherApp/src/main.html
@@ -11,6 +11,29 @@
         <input type="text" placeholder="Enter City Name" spellcheck="false">
         <button><img src="/src/assets/images/search.png"></button>
     </div>
+    <div class="weather">
+        <img src="assets/images/rain.png" class="weather-icon">
+        <h1 class="temp">22°C</h1>
+        <h2 class="city">New York</h2>
+        <div class="details">
+            <div class="col">
+                <img src="assets/images/humidity.png">
+                <div>
+                    <p class="humidity">50%</p>
+                    <p>Humidity</p>
+                </div>
+            </div>
+            <div class="col">
+                <img src="assets/images/wind.png">
+                <div>
+                    <p class="wind">15km/h</p>
+                    <p>Wind Speed</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
+
+<script src="logic.js"></script>
 </html>
